@@ -787,4 +787,9 @@ was broken in all cases./
 /\P{L}?\d/
   \x8aBCD 
 
+/[\PPP\x8a]{1,}\x80/
+    A\x80
+
+/(?:[\PPa*]*){8,}/
+
 / End of testinput6 /
